fix on size 4 alignment

--- a/styles/main.less
+++ b/styles/main.less
@@ -131,7 +131,7 @@ body {
       .font-size-larger {
         font-size: 32px;
         font-family: @headline-font-family;
-        line-height: 1.1;
+        line-height: 1.4;
         font-weight: 700;
       }
       .font-size-medium ,.font-size-smaller{
@@ -302,7 +302,7 @@ body {
 
       font-size: 16px;
       font-weight: bold;
-      line-height: 1.2;
+      line-height: 1;
     }
     .description, .body, .description li, .body li, {
       font-size: 14px;
